<resources>
    <string name="app_name">Black Offer</string>
    <string name="login_text">Login to your account</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="facebook">Facebook</string>
    <string name="otp_login">Otp Login</string>
    <string name="already_have_an_account_log_in">Already have an account?</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="a_verification_link_will_be_sent_to_this_number">A verification link will be sent to this number.</string>
    <string name="_00_60">00:60</string>
    <string name="_00_00">00:00</string>
    <string name="enter_otp_received">Enter OTP Received</string>
    <string name="enter_the_otp_below_in_case_we_fail_to_detect_the_sms_automatically">Enter the otp below in case we fail to detect the sms automatically.</string>
    <string name="verify">VERIFY</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="facebook_app_id">your facebook app id</string>
    <string name="fb_login_protocol_scheme">fb login protocol scheme</string>
    <string name="you_are_now_logged_in">You are now logged In.</string>
    <string name="signout">Signout</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="we_just_need_your_register_email_id_to_sent_you_password_reset_instruction">We just need your registered email to sent you password reset instruction.</string>
    <string name="log_in"><u>Log In</u></string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="please_focus_on_qr_code_to_scan">Please focus on QR code to scan.</string>
    <string name="store_address">Store Address :</string>
    <string name="search_stores">Search Stores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
