<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    tools:context=".SelectLoginType">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="26dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute,UseCompoundDrawables,UselessLeaf,UselessParent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="sans-serif-light"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            tools:ignore="Autofill"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#EA2D6D" />

        <Button
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="Login"
            android:textColor="#ffffff"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/createAccPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_bg"
            android:text="Create Account"
            android:textColor="#EA2D6D"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="40"
                android:background="#EA2D6D" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="center"
                android:text="or"
                android:textColor="#EA2D6D"
                tools:ignore="HardcodedText" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="40"
                android:background="#EA2D6D" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebookLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_facebook"
                android:background="@drawable/circle_btn"
                android:src="@drawable/ic_facebook"
                android:textColor="#EA2D6D"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <ImageView
                android:id="@+id/otpLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/circle_btn"
                android:src="@drawable/ic_otp"
                android:textColor="#EA2D6D"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <ImageView
                android:id="@+id/googleLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/circle_btn"
                android:src="@drawable/ic_email"
                android:padding="12dp"
                android:textColor="#EA2D6D"
                tools:ignore="ButtonStyle,RtlHardcoded" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="12sp"
            android:text="By continuing,I accept terms and services."
            android:textColor="#EA2D6D"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</RelativeLayout>